fix(css): fixed a bug how the left and right tabs overflow the screen

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -12,7 +12,7 @@ video{
 #historicTab, #searchResultTab{
     border: 3px solid black;
     border-top: 0px;
-    height: 100vh;
+    height: calc(100vh - 70px);
     width: calc(100% - 20px);
     background-color: rgb(59, 59, 59);
     overflow-y: auto;
